threaded nyt all through

--- a/Feature Builder.ipynb
+++ b/Feature Builder.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_dir = 'data/bucket/twitter/'\n",
@@ -24,20 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "influencers = ['BarackObama_sentiment','cnnbrk_sentiment', 'KimKardashian_sentiment', 'Trump_sentiment']\n",
-    "sources = ['New York Times_sentiment', 'CNN_sentiment', 'Washington Post_sentiment']\n",
+    "influencers = ['BarackObama_sentiment','cnnbrk_sentiment', 'KimKardashian_sentiment']\n",
+    "sources = ['New York Times_sentiment', 'CNN_sentiment', 'Washington Post_sentiment', 'NYT_ALL_sentiment']\n",
     "indices = ['VIX_Predict', 'SPY_Predict']\n",
     "stocks = ['AAPL_Predict', 'GOOG_Predict','MSFT_Predict']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twitter_important_columns = ['Date','sentiment_score','heuristic_score']\n",
@@ -46,8 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "first_date = pd.to_datetime('1/1/2015')\n",
@@ -56,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfs_twitter = []\n",
@@ -74,8 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfs_news = []\n",
@@ -90,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfs_stock = []\n",
@@ -124,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +173,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3793</th>\n",
+       "      <td>3793</td>\n",
        "      <td>2015-01-02</td>\n",
        "      <td>-0.012675</td>\n",
        "      <td>-0.043541</td>\n",
@@ -165,7 +181,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3794</th>\n",
+       "      <td>3794</td>\n",
        "      <td>2015-01-05</td>\n",
        "      <td>-0.027830</td>\n",
        "      <td>-0.010066</td>\n",
@@ -173,7 +189,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3795</th>\n",
+       "      <td>3795</td>\n",
        "      <td>2015-01-06</td>\n",
        "      <td>-0.016160</td>\n",
        "      <td>0.025249</td>\n",
@@ -181,7 +197,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3796</th>\n",
+       "      <td>3796</td>\n",
        "      <td>2015-01-07</td>\n",
        "      <td>0.006195</td>\n",
        "      <td>0.051026</td>\n",
@@ -189,7 +205,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3797</th>\n",
+       "      <td>3797</td>\n",
        "      <td>2015-01-08</td>\n",
        "      <td>0.018937</td>\n",
        "      <td>0.030852</td>\n",
@@ -197,7 +213,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -205,7 +221,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4292</th>\n",
+       "      <td>4292</td>\n",
        "      <td>2016-12-23</td>\n",
        "      <td>-0.006532</td>\n",
        "      <td>0.016697</td>\n",
@@ -213,7 +229,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4293</th>\n",
+       "      <td>4293</td>\n",
        "      <td>2016-12-27</td>\n",
        "      <td>0.008046</td>\n",
        "      <td>-0.000601</td>\n",
@@ -221,7 +237,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4294</th>\n",
+       "      <td>4294</td>\n",
        "      <td>2016-12-28</td>\n",
        "      <td>0.008582</td>\n",
        "      <td>-0.007403</td>\n",
@@ -229,7 +245,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4295</th>\n",
+       "      <td>4295</td>\n",
        "      <td>2016-12-29</td>\n",
        "      <td>-0.009105</td>\n",
        "      <td>-0.005582</td>\n",
@@ -237,7 +253,7 @@
        "      <td>AAPL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4296</th>\n",
+       "      <td>4296</td>\n",
        "      <td>2016-12-30</td>\n",
        "      <td>0.001717</td>\n",
        "      <td>-0.006858</td>\n",
@@ -266,7 +282,7 @@
        "[504 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,8 +293,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_twitter = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
@@ -287,8 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_news = reduce(lambda  left,right: pd.merge(left,right,on=['Date'],\n",
@@ -297,8 +317,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_stock = pd.concat(dfs_stock, ignore_index=True)"
@@ -306,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -331,136 +353,151 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>Change</th>\n",
-       "      <th>Lag 2 Change</th>\n",
-       "      <th>Lag 2 Significant</th>\n",
-       "      <th>stock</th>\n",
+       "      <th>New York Times_sentiment_score</th>\n",
+       "      <th>CNN_sentiment_score</th>\n",
+       "      <th>Washington Post_sentiment_score</th>\n",
+       "      <th>NYT_sentiment_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>-0.012675</td>\n",
-       "      <td>-0.043541</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015-03-26</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0582</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.2555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>-0.027830</td>\n",
-       "      <td>-0.010066</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>AAPL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-01-06</td>\n",
-       "      <td>-0.016160</td>\n",
-       "      <td>0.025249</td>\n",
        "      <td>1</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <td>2015-05-13</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.4360</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-9.8265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015-01-07</td>\n",
-       "      <td>0.006195</td>\n",
-       "      <td>0.051026</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-22</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-10.8930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-01-08</td>\n",
-       "      <td>0.018937</td>\n",
-       "      <td>0.030852</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AAPL</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2015-12-28</td>\n",
+       "      <td>0.4019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1513</td>\n",
+       "      <td>-1.6035</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2016-02-26</td>\n",
+       "      <td>0.4404</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.0669</td>\n",
+       "      <td>-18.6687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1507</th>\n",
-       "      <td>2016-12-23</td>\n",
-       "      <td>-0.006109</td>\n",
-       "      <td>-0.000788</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MSFT</td>\n",
+       "      <td>1356</td>\n",
+       "      <td>2015-12-14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1508</th>\n",
-       "      <td>2016-12-27</td>\n",
-       "      <td>-0.003783</td>\n",
-       "      <td>-0.005537</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MSFT</td>\n",
+       "      <td>1357</td>\n",
+       "      <td>2015-12-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21.8241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1509</th>\n",
-       "      <td>2016-12-28</td>\n",
-       "      <td>0.003006</td>\n",
-       "      <td>-0.006940</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MSFT</td>\n",
+       "      <td>1358</td>\n",
+       "      <td>2015-12-16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-3.7983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1510</th>\n",
-       "      <td>2016-12-29</td>\n",
-       "      <td>-0.008517</td>\n",
-       "      <td>-0.001114</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MSFT</td>\n",
+       "      <td>1359</td>\n",
+       "      <td>2015-12-18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-5.2561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1511</th>\n",
-       "      <td>2016-12-30</td>\n",
-       "      <td>0.001591</td>\n",
-       "      <td>-0.007624</td>\n",
-       "      <td>0</td>\n",
-       "      <td>MSFT</td>\n",
+       "      <td>1360</td>\n",
+       "      <td>2015-12-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-3.5297</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1512 rows × 5 columns</p>\n",
+       "<p>1361 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date    Change  Lag 2 Change  Lag 2 Significant stock\n",
-       "0    2015-01-02 -0.012675     -0.043541                 -1  AAPL\n",
-       "1    2015-01-05 -0.027830     -0.010066                 -1  AAPL\n",
-       "2    2015-01-06 -0.016160      0.025249                  1  AAPL\n",
-       "3    2015-01-07  0.006195      0.051026                  1  AAPL\n",
-       "4    2015-01-08  0.018937      0.030852                  1  AAPL\n",
-       "...         ...       ...           ...                ...   ...\n",
-       "1507 2016-12-23 -0.006109     -0.000788                  0  MSFT\n",
-       "1508 2016-12-27 -0.003783     -0.005537                  0  MSFT\n",
-       "1509 2016-12-28  0.003006     -0.006940                  0  MSFT\n",
-       "1510 2016-12-29 -0.008517     -0.001114                  0  MSFT\n",
-       "1511 2016-12-30  0.001591     -0.007624                  0  MSFT\n",
+       "           Date  New York Times_sentiment_score  CNN_sentiment_score  \\\n",
+       "0    2015-03-26                          0.0000               0.0582   \n",
+       "1    2015-05-13                          0.0000               0.4360   \n",
+       "2    2015-12-22                          0.0000                  NaN   \n",
+       "3    2015-12-28                          0.4019                  NaN   \n",
+       "4    2016-02-26                          0.4404                  NaN   \n",
+       "...         ...                             ...                  ...   \n",
+       "1356 2015-12-14                             NaN                  NaN   \n",
+       "1357 2015-12-15                             NaN                  NaN   \n",
+       "1358 2015-12-16                             NaN                  NaN   \n",
+       "1359 2015-12-18                             NaN                  NaN   \n",
+       "1360 2015-12-25                             NaN                  NaN   \n",
        "\n",
-       "[1512 rows x 5 columns]"
+       "      Washington Post_sentiment_score  NYT_sentiment_score  \n",
+       "0                                 NaN              -1.2555  \n",
+       "1                                 NaN              -9.8265  \n",
+       "2                                 NaN             -10.8930  \n",
+       "3                              0.1513              -1.6035  \n",
+       "4                             -2.0669             -18.6687  \n",
+       "...                               ...                  ...  \n",
+       "1356                              NaN               1.5830  \n",
+       "1357                              NaN             -21.8241  \n",
+       "1358                              NaN              -3.7983  \n",
+       "1359                              NaN              -5.2561  \n",
+       "1360                              NaN              -3.5297  \n",
+       "\n",
+       "[1361 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_stock"
+    "df_news"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "index_name = [' '+index.split('_')[0] for index in indices]"
@@ -468,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,8 +515,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Handle Weekends"
@@ -487,8 +526,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predict_dates = df_stock['Date']"
@@ -496,8 +537,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#FOR NOW ONLY DELETE THE WEEKENDS\n",
@@ -507,8 +550,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_twitter.to_csv(output_dir+'twitter_features.csv', index=False)\n",
@@ -520,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -541,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
