--- a/NYT Processing.ipynb
+++ b/NYT Processing.ipynb
@@ -14,13 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data_dir = 'data/nyt/'"
+    "data_dir = 'data/nyt/'\n",
+    "output_dir = 'data/in/news/'"
    ]
   },
   {
@@ -37,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "li = []\n",
@@ -52,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = frame[['pub_date','headline']]"
@@ -190,19 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = df.rename(columns={'pub_date':'Date'})"
+    "df = df.rename(columns={'pub_date':'Date', 'headline':'title'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['Date'] = pd.to_datetime(df['Date']).dt.normalize()"
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -221,11 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df.to_csv('NYT_ALL.csv')"
+    "df.to_csv(output_dir+'NYT_ALL.csv', index=False)"
    ]
   },
   {
