--- a/Sentiment Maker.ipynb
+++ b/Sentiment Maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -35,12 +35,12 @@
     "news_dir = 'data/bucket/news/'\n",
     "twitter_dir = 'data/bucket/twitter/'\n",
     "influencers = ['BarackObama','cnnbrk', 'KimKardashian', 'Trump']\n",
-    "sources = ['New York Times', 'CNN', 'Washington Post']"
+    "sources = ['New York Times', 'CNN', 'Washington Post','NYT_ALL']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +136,342 @@
       "Processing: New York Times\n",
       "Processing: CNN\n",
       "Processing: Washington Post\n",
+      "Processing: NYT_ALL\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
+      "Failed to score content: nan\n",
       "done\n"
      ]
     }
