--- a/ML.ipynb
+++ b/ML.ipynb
@@ -661,7 +661,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def MLP_param_selection(X, y):\n",
@@ -12184,7 +12186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
